<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMsgInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:gravity="center"
        android:text="@string/msgInicial"
        android:textColor="@color/texto"
        android:textSize="@dimen/tamMsgInicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tvMsgTela1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:gravity="center"
        android:text="@string/tela1msg"
        android:textColor="@color/texto"
        android:textSize="@dimen/demaisTextos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMsgInicial" />

    <Button
        android:id="@+id/btNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:background="@color/texto"
        android:onClick="onClickTcc"
        android:text="@string/tela1btn1"
        android:textColor="@color/fundo"
        android:textSize="@dimen/demaisTextos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMsgTela1" />

    <Button
        android:id="@+id/btNotas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:background="@color/texto"
        android:onClick="onClickSubsDid"
        android:text="@string/tela1btn2"
        android:textColor="@color/fundo"
        android:textSize="@dimen/demaisTextos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNotas" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ifc_horizontal_brusque2" />

    <Button
        android:id="@+id/btApagarPrefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="17dp"
        android:background="@color/texto"
        android:onClick="onClickApagarPrefs"
        android:text="@string/tela1btnApagar"
        android:textColor="@color/fundo"
        android:textSize="@dimen/demaisTextos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:background="@color/texto"
        android:onClick="onClickSubsTit"
        android:text="@string/tela1btn3"
        android:textColor="@color/fundo"
        android:textSize="@dimen/demaisTextos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNotas2" />

</androidx.constraintlayout.widget.ConstraintLayout>